@@ -23,9 +23,11 @@ emc2 (1:2.2.2~cvs) unstable; urgency=low
   * fix comp311 examples to program Z position
   * fix stepconf for negative and fractional axis SCALEs
   * implement M66 E- (read analog value from gcode)
-  * add missing dependency on python2.4-glade 
+  * add missing dependency on python2.4-glade
+  * fix problem where metric image-to-gcode would go to the safety height
+    before setting metric units 
 
- -- jepler <jepler@unpythonic.net>  Thu, 29 Nov 2007 07:48:55 -0600
+ -- jepler <jepler@unpythonic.net>  Thu, 29 Nov 2007 09:43:05 -0600
 
 emc2 (1:2.2.1) unstable; urgency=low
 
